--- a/Ch01. 파이썬 데이터 분석 기초/2_Numpy.ipynb
+++ b/Ch01. 파이썬 데이터 분석 기초/2_Numpy.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1p9dKMa01ZW3mdx5-QM3nIcP3dvZj3IkG",
-      "authorship_tag": "ABX9TyPPRPfiiqT5XEOGF0+PkWd+",
+      "authorship_tag": "ABX9TyPDoaTlMsrUkkkhZNiLkzAW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "_rgPZIIcWCJE"
       },
@@ -70,7 +70,7 @@
         "id": "JMc3AcNBW2u_",
         "outputId": "6c07fc35-72dc-4d9a-ad64-8eddc2dfeaa9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,10 +90,185 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 0 ~ 1 사이 임의의 실수 100개\n",
+        "rand1 = np.random.rand(100)\n",
+        "rand1"
       ],
       "metadata": {
         "id": "Gtg77g78XFZX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 표준 정규분포를 따르는 실수 100개\n",
+        "rand2 = np.random.randn(100)\n",
+        "rand2"
+      ],
+      "metadata": {
+        "id": "eqy1e2CVc44d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 행렬(Numpy 자료구조)\n",
+        "m1 = np.array([[1, 2], [3, 4]])\n",
+        "print(m1)\n",
+        "\n",
+        "m2 = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+        "print(m2)\n",
+        "\n",
+        "m3 = np.zeros([2, 3])\n",
+        "print(m3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_lgta0f7dGgw",
+        "outputId": "6ab27f4b-f234-423e-d148-d097f47f0dc4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [3 4]]\n",
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 단위 행렬\n",
+        "e1 = np.identity(2)\n",
+        "print(e1)\n",
+        "\n",
+        "e2 = np.identity(3)\n",
+        "print(e2)"
+      ],
+      "metadata": {
+        "id": "nhByibvVdecG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "364f1ac1-cea1-49ad-c4af-dc5f66e5ae26"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 0.]\n",
+            " [0. 1.]]\n",
+            "[[1. 0. 0.]\n",
+            " [0. 1. 0.]\n",
+            " [0. 0. 1.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 역행렬\n",
+        "im1 = np.linalg.inv(m1)\n",
+        "print(im1)\n",
+        "\n",
+        "result = m1.dot(im1)\n",
+        "print(result.round())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6BzTLc1nebwm",
+        "outputId": "482b6c1f-c5cf-48ee-c982-bcf553d1d67c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-2.   1. ]\n",
+            " [ 1.5 -0.5]]\n",
+            "[[1. 0.]\n",
+            " [0. 1.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 행렬 인덱싱\n",
+        "mat = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
+        "print(mat)\n",
+        "\n",
+        "print('r1 : ',mat[0, 0])\n",
+        "print('r2 : ',mat[0, :])\n",
+        "print('r3 : ',mat[:, 0])\n",
+        "\n",
+        "print('r4 : ',mat[0:2, 0:2])\n",
+        "print('r5 : ',mat[:, 0:2])\n",
+        "print('r6 : ',mat[:, 2:4])\n",
+        "print('r7 : ',mat[1:3, 1:3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rI7syI9Re1Tx",
+        "outputId": "ee9b8062-07bb-4797-edde-a9894e21cf35"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4]\n",
+            " [ 5  6  7  8]\n",
+            " [ 9 10 11 12]]\n",
+            "r1 :  1\n",
+            "r2 :  [1 2 3 4]\n",
+            "r3 :  [1 5 9]\n",
+            "r4 :  [[1 2]\n",
+            " [5 6]]\n",
+            "r5 :  [[ 1  2]\n",
+            " [ 5  6]\n",
+            " [ 9 10]]\n",
+            "r6 :  [[ 3  4]\n",
+            " [ 7  8]\n",
+            " [11 12]]\n",
+            "r7 :  [[ 6  7]\n",
+            " [10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Qa0IuwMUft4J"
       },
       "execution_count": null,
       "outputs": []
